# sustainability-gleif-matching-network

./: .gitignore  Makefile  README.md  RESTRUCTURE_LOG.md  config.example.yaml  pyproject.toml
data/raw/: sustainability_source_template.csv
data/raw/initiative_lists/: README.md
data/samples/: edges_sample.csv  match_crosswalk_sample.csv  matching_eval_labels_template.csv  matching_eval_metrics.json  matching_eval_sample_auto.csv  matching_eval_sample_review.csv  matching_eval_sample_unmatched.csv  network_stats.json  nodes_in_network_sample.csv  nodes_sample.csv  run_manifest_sample.json
docs/: data_dictionary.md  data_provenance.md  matching_eval.md  matching_rules.md  methodology.md  network_sanity.md
logs/: COMMAND_LOG.md  DECISION_LOG.md  RUN_SUMMARY.md
src/: __init__.py  build_network.py  build_sustainability_source.py  clean_names.py  cli.py  config.py  diagnostics.py  gleif_level1.py  gleif_level2.py  io_utils.py  match_sustainability.py  preprocess_gleif.py
tests/: test_clean_names.py  test_threshold_logic.py
tools/: generate_matching_eval_report.py  network_sanity.py  sample_matching_eval.py
